--- a/en/index.html
+++ b/en/index.html
@@ -42,18 +42,18 @@
 			</div>
 		</div>
 		<div id="gallery">
-			<header>课程图片</header>
+			<header>GALLERY</header>
 			<ul>
 				<li>
-					<header>OW潜水课程</header>
+					<header>OW DIVE</header>
 					<div>
 						<a href="dive_gallery.html" style="background-image:url(images/dive_1024/master_jiang.jpg)"></a>
 					</div>
 				</li>
 				<li>
-					<header>射击课程</header>
+					<header>SHOOT</header>
 					<div>
-						<a href="#" style="background-image:url(images/shoot_1024/DSC_0107.jpg)"></a>
+						<a href="shoot_gallery.html" style="background-image:url(images/shoot_1024/DSC_0107.jpg)"></a>
 					</div>
 				</li>
 			</ul>
