--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<li>
 					<header>射击课程</header>
 					<div>
-						<a href="#" style="background-image:url(images/shoot_1024/DSC_0107.jpg)"></a>
+						<a href="shoot_gallery.html" style="background-image:url(images/shoot_1024/DSC_0107.jpg)"></a>
 					</div>
 				</li>
 			</ul>
